<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarSize="1dp"
    tools:context=".activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@android:color/darker_gray"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_margin="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_arrow_back"
            app:layout_constraintBottom_toBottomOf="@id/iv_background"
            app:layout_constraintEnd_toEndOf="@id/iv_background"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/iv_background"
            app:layout_constraintTop_toTopOf="@id/iv_background"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_toolbar_name"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@string/toolbar_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ib_back"
            app:layout_constraintEnd_toEndOf="@id/iv_background"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/ib_back"
            app:layout_constraintTop_toTopOf="@id/ib_back" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar_detail"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:src="@color/secondary_text"
            app:layout_constraintBottom_toBottomOf="@id/iv_background"
            app:layout_constraintEnd_toEndOf="@id/iv_background"
            app:layout_constraintStart_toStartOf="@id/iv_background"
            app:layout_constraintTop_toBottomOf="@id/tv_toolbar_name"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_username_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_background"
            app:layout_constraintEnd_toEndOf="@id/iv_background"
            app:layout_constraintStart_toStartOf="@id/iv_background"
            app:layout_constraintTop_toBottomOf="@id/iv_avatar_detail"
            app:layout_constraintVertical_bias="0.1" />

        <View
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_container"
            android:elevation="8dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_background" />

        <TextView
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/followers"
            android:translationZ="8dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toStartOf="@id/following"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toTopOf="@id/container"
            app:layout_constraintVertical_bias="0.8" />

        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/following"
            android:translationZ="8dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toStartOf="@id/repository"
            app:layout_constraintStart_toEndOf="@id/followers"
            app:layout_constraintTop_toTopOf="@id/container"
            app:layout_constraintVertical_bias="0.8" />

        <TextView
            android:id="@+id/repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/repository"
            android:translationZ="8dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toEndOf="@id/following"
            app:layout_constraintTop_toTopOf="@id/container"
            app:layout_constraintVertical_bias="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="280dp" />

        <TextView
            android:id="@+id/tot_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:translationZ="8dp"
            app:layout_constraintBottom_toBottomOf="@id/container"
            app:layout_constraintEnd_toEndOf="@id/followers"
            app:layout_constraintStart_toStartOf="@id/followers"
            app:layout_constraintTop_toTopOf="@id/guideline"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/tot_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/primary_text"
            android:translationZ="8dp"
            app:layout_constraintBottom_toBottomOf="@id/container"
            app:layout_constraintEnd_toEndOf="@id/following"
            app:layout_constraintStart_toStartOf="@id/following"
            app:layout_constraintTop_toTopOf="@id/guideline"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/tot_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/primary_text"
            android:translationZ="8dp"
            app:layout_constraintBottom_toBottomOf="@id/container"
            app:layout_constraintEnd_toEndOf="@id/repository"
            app:layout_constraintStart_toStartOf="@id/repository"
            app:layout_constraintTop_toTopOf="@id/guideline"
            app:layout_constraintVertical_bias="0.2" />

        <ImageView
            android:id="@+id/iv_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_person"
            app:layout_constraintBottom_toTopOf="@id/iv_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container" />

        <TextView
            android:id="@+id/tv_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/type"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_type"
            app:layout_constraintStart_toEndOf="@id/iv_person"
            app:layout_constraintTop_toTopOf="@id/iv_person" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/iv_person"
            app:layout_constraintStart_toStartOf="@id/tv_type_title"
            app:layout_constraintTop_toBottomOf="@id/tv_type_title" />

        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toTopOf="@id/iv_company"
            app:layout_constraintEnd_toEndOf="@id/iv_person"
            app:layout_constraintStart_toStartOf="@id/iv_person"
            app:layout_constraintTop_toBottomOf="@id/iv_person" />

        <TextView
            android:id="@+id/tv_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/location"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_location"
            app:layout_constraintStart_toEndOf="@id/iv_location"
            app:layout_constraintTop_toTopOf="@id/iv_location" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/iv_location"
            app:layout_constraintStart_toStartOf="@id/tv_location_title"
            app:layout_constraintTop_toBottomOf="@id/tv_location_title" />

        <ImageView
            android:id="@+id/iv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_business"
            app:layout_constraintBottom_toTopOf="@id/iv_url"
            app:layout_constraintEnd_toEndOf="@id/iv_location"
            app:layout_constraintStart_toStartOf="@id/iv_location"
            app:layout_constraintTop_toBottomOf="@id/iv_location" />

        <TextView
            android:id="@+id/tv_company_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/company"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_company"
            app:layout_constraintStart_toEndOf="@id/iv_company"
            app:layout_constraintTop_toTopOf="@id/iv_company" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/iv_company"
            app:layout_constraintStart_toStartOf="@id/tv_company_title"
            app:layout_constraintTop_toBottomOf="@id/tv_company_title" />

        <ImageView
            android:id="@+id/iv_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_link"
            app:layout_constraintEnd_toEndOf="@id/iv_company"
            app:layout_constraintStart_toStartOf="@id/iv_company"
            app:layout_constraintTop_toBottomOf="@id/iv_company" />

        <TextView
            android:id="@+id/tv_url_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/url"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_url"
            app:layout_constraintStart_toEndOf="@id/iv_url"
            app:layout_constraintTop_toTopOf="@id/iv_url" />

        <TextView
            android:id="@+id/tv_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/iv_url"
            app:layout_constraintStart_toStartOf="@id/tv_url_title"
            app:layout_constraintTop_toBottomOf="@id/tv_url_title" />

        <ImageButton
            android:id="@+id/ib_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="@id/tv_url"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_url" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tv_location_title,tv_location,iv_location" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tv_company_title,tv_company,iv_company" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>